--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
 <div style="background-color: whitesmoke;">
-    <img style="width: 60px; height:60px;"
-        src="https://cdn.discordapp.com/attachments/772753451263197184/773164757166981120/mon_petit_jardin_1.png">
+    <button mat-button [routerLink]="['/']"><img style="width: 60px; height:60px;"
+        src="https://cdn.discordapp.com/attachments/772753451263197184/773164757166981120/mon_petit_jardin_1.png"></button>
 </div>
 <span style="flex: 1 1 auto;"></span>
 <button mat-button>Contact</button>
