--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -1,6 +1,6 @@
 <h1>Vous avez sélectionné [TEST] :</h1>
 <mat-list>
-    <!-- <mat-list-item *ngFor="let fruit in fruits">{{ fruit.nom }}</mat-list-item>
-    <mat-list-item *ngFor="">{{ legume.nom }}</mat-list-item> -->
+    <mat-list-item *ngFor="let fruit of fruits"><p >{{ fruit.nom }}</p></mat-list-item>
+    <mat-list-item *ngFor="let legume of legumes"><p *ngIf="elementsSelectionnes.includes(legume.id)">{{ legume.nom }}</p></mat-list-item>
 </mat-list>
 
