--- a/src/app/conseils/conseils.component.css
+++ b/src/app/conseils/conseils.component.css
@@ -1,4 +1,40 @@
-.image{
-    width: 50px;
-    height: 50px;
+.image {
+  width: 50px;
+  height: 50px;
 }
+
+.container {
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "header header header header"
+    "main1 main2 . ."
+    "main3 main4 . ."
+    "main5 main6 . .";
+}
+
+.item-1 {
+  grid-area: main1;
+}
+
+.item-2 {
+  grid-area: main2;
+}
+
+.item-3 {
+  grid-area: main3;
+}
+
+.item-4 {
+  grid-area: main4;
+}
+
+.item-5 {
+  grid-area: main5;
+}
+
+.item-6 {
+  grid-area: main6;
+}
+
