--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -22,6 +22,6 @@
     <!-- </div> -->
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="getResults()">Valider ma liste</button>
+    <button mat-button (click)="getResults()" [disabled]="!checkedItems.length">Valider ma liste</button>
   </mat-card-actions>
 </mat-card>
