--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -1,10 +1,11 @@
-<h1>Vous avez sélectionné :</h1>
+<h1 class="jolieTexte">Vous avez sélectionné :</h1>
 <mat-list>
-  <div *ngFor="let element of liste" class="jolieTexte">
+  <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
     <div class="container">
 
-      <h4 class="jolieTexte">{{ element['nom'] }}</h4>
-      <div><img class="image" [src]="element['image']"></div>
+      <div style="text-align: center"><img class="image" [src]="element['image']"></div>
+      <h4 class="jolieTexte; textcentre">{{ element['nom'] }}</h4>
+
 
       <div class="item-1">item a 1</div>
       <div class="item-2">item b 1</div>
@@ -13,18 +14,15 @@
       <div class="item-5">item a 3</div>
       <div class="item-6">item b 3</div>
     </div>
-  </div>
+  </mat-card>
 
 </mat-list>
 
 <mat-card>
-  <mat-card-header style="font-family: 'Alegreya Sans', sans-serif;">
+  <mat-card-header class="jolieTexte; textbloc" style="margin-bottom: 15  px">
     Vidéo pour réaliser soi-même son potager.
   </mat-card-header>
-
-  <mat-card-content>
-  </mat-card-content>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/G4BlA68xs9Y" frameborder="0"
+  <iframe class="frame" width="560" height="315" src="https://www.youtube.com/embed/G4BlA68xs9Y" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
 </mat-card>
