--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -1,4 +1,4 @@
-<h1 class="jolieTexte">Vous avez sélectionné :</h1>
+<h1 class="jolieTexte" style="margin-top: 20px;">Vous avez sélectionné :</h1>
 <mat-list>
   <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
     <div class="container">
@@ -19,8 +19,8 @@
 </mat-list>
 
 <mat-card>
-  <mat-card-header class="jolieTexte; textbloc" style="margin-bottom: 15  px">
-    Vidéo pour réaliser soi-même son potager.
+  <mat-card-header class="jolieTexte; textbloc" style="margin-bottom: 15px">
+    Vidéo pour réaliser soi-même son potager :
   </mat-card-header>
   <iframe class="frame" width="560" height="315" src="https://www.youtube.com/embed/G4BlA68xs9Y" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
