--- a/src/app/conseils/conseils.component.css
+++ b/src/app/conseils/conseils.component.css
@@ -1,11 +1,11 @@
 #image {
   width: 30px;
   height: 30px;
-  grid-area: header1;
+  grid-area: header;
 }
 
 #titre{
-  grid-area: header2;
+  grid-area: header;
 }
 
 .bloc {
@@ -20,7 +20,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: 100px 100px 100px 100px;
+  grid-template-columns: 100px 300px 300px 300px;
   grid-template-rows: auto;
   grid-template-areas:
     "header header header header"
