--- a/src/app/conseils/conseils.component.css
+++ b/src/app/conseils/conseils.component.css
@@ -1,6 +1,6 @@
 .image {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
 }
 
 .bloc {
@@ -20,10 +20,10 @@
 
 .container {
   display: grid;
-  grid-template-columns: 100px 100px 100px 100px;
+  grid-template-columns: 100px 300px 300px 300px;
   grid-template-rows: auto;
   grid-template-areas:
-    "header header header header"
+    " main7 main8 . ."
     ". main1 main2 ."
     ". main3 main4."
     ". main5 main6.";
@@ -56,6 +56,16 @@
 
 .item-6 {
   grid-area: main6;
+  text-align: center;
+}
+
+.item-image{
+  grid-area: main7;
+  text-align: center;
+}
+
+.item-nom{
+  grid-area: main8;
   text-align: center;
 }
 
