--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -3,16 +3,16 @@
   <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
     <div class="container">
 
-      <div style="text-align: center"><img class="image" [src]="element['image']"></div>
-      <h4 class="jolieTexte; textcentre">{{ element['nom'] }}</h4>
+      <div class="item-image"><img class="image" [src]="element['image']"></div>
+      <h4 class="item-nom">{{ element['nom'] }}</h4>
 
 
-      <div class="item-1">item a 1</div>
-      <div class="item-2">item b 1</div>
-      <div class="item-3">item a 2</div>
-      <div class="item-4">item b 2</div>
-      <div class="item-5">item a 3</div>
-      <div class="item-6">item b 3</div>
+      <div class="item-1">SAlut à tous blablablabla blablablabla blablablablablablablablablablablablablablablabla</div>
+      <div class="item-2">SAlut à tous blablablabla blablablabla blablablablablablablablablablablablablablablabla</div>
+      <div class="item-3">SAlut à tous blablablabla blablablabla blablablablablablablablablablablablablablablabla</div>
+      <div class="item-4">SAlut à tous blablablabla blablablabla blablablablablablablablablablablablablablablabla</div>
+      <div class="item-5">SAlut à tous blablablabla blablablabla blablablablablablablablablablablablablablablabla</div>
+      <div class="item-6">SAlut à tous blablablabla blablablabla blablablablablablablablablablablablablablablabla</div>
     </div>
   </mat-card>
 
