--- a/src/app/conseils/conseils.component.css
+++ b/src/app/conseils/conseils.component.css
@@ -20,10 +20,10 @@
 
 .container {
   display: grid;
-  grid-template-columns: 100px 300px 300px 300px;
+  grid-template-columns: 100px 300px 300px 0px;
   grid-template-rows: auto;
   grid-template-areas:
-    " main7 main8 . ."
+    " image nom . ."
     ". main1 main2 ."
     ". main3 main4."
     ". main5 main6.";
@@ -31,42 +31,42 @@
 
 .item-1 {
   grid-area: main1;
-  text-align: center;
+  text-align: left;
 }
 
 .item-2 {
   grid-area: main2;
-  text-align: center;
+  text-align: left;
 }
 
 .item-3 {
   grid-area: main3;
-  text-align: center;
+  text-align: left;
 }
 
 .item-4 {
   grid-area: main4;
-  text-align: center;
+  text-align: left;
 }
 
 .item-5 {
   grid-area: main5;
-  text-align: center;
+  text-align: left;
 }
 
 .item-6 {
   grid-area: main6;
-  text-align: center;
+  text-align: left;
 }
 
 .item-image{
-  grid-area: main7;
-  text-align: center;
+  grid-area: image;
+  text-align: left;
 }
 
 .item-nom{
-  grid-area: main8;
-  text-align: center;
+  grid-area: nom;
+  text-align: left;
 }
 
 /*.video-youtube{
@@ -81,4 +81,3 @@
   display: block;
   margin: 0 auto;
 }
-
