--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -1,7 +1,7 @@
 <h1 class="jolieTexte">Vous avez sélectionné :</h1>
 <mat-list>
   <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
-    <div class="container">
+    <mat-card class="container">
 
       <div class="item-image"><img class="image" [src]="element['image']"></div>
       <h4 class="item-nom">{{ element['nom'] }}</h4>
@@ -12,13 +12,13 @@
       <div class="item-4">La récolte pourra être fait après {{element['recolte']}} semaines.</div>
       <div class="item-5">Un petit conseil pour favoriser la pousse : {{ element['conditions']}}.</div>
       <div class="item-6">Quelques liens utiles : <a *ngFor="let lien of element['liens']" [href]="lien">Test</a></div>
-    </div>
+    </mat-card>
   </mat-card>
 
 </mat-list>
 
 <mat-card>
-  <mat-card-header class="jolieTexte; textbloc" style="margin-bottom: 15  px">
+  <mat-card-header class="jolieTexte; textbloc" style="margin-bottom: 15px">
     Vidéo pour réaliser soi-même son potager.
   </mat-card-header>
   <iframe class="frame" width="560" height="315" src="https://www.youtube.com/embed/G4BlA68xs9Y" frameborder="0"
