--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,11 +1,9 @@
 <mat-card id="potager">
   <mat-card-header>
     <mat-card-title>Mon petit jardin</mat-card-title>
+    <mat-card-subtitle>Commencer mon potager</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <p>
-      Commencer mon potager :
-    </p>
     <!-- <div style="display: inline-block;"> -->
       <mat-list style="display: inline-block;" >
         <mat-list-item *ngFor="let fruit of fruits">
