--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -1,4 +1,4 @@
-<h1 class="jolieTexte">Vous avez sélectionné :</h1>
+<mat-card>Vous avez sélectionné :</mat-card>
 <mat-list>
   <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
     <mat-card class="container">
