--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -2,9 +2,11 @@
 <mat-list>
   <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
     <mat-card class="container">
+      <mat-card-header>
+        <div mat-card-avatar class="item-image"><img class="image" [src]="element['image']"></div>
+        <mat-card-title>{{ element['nom'] }}</mat-card-title>
+      </mat-card-header>
 
-      <div class="item-image"><img class="image" [src]="element['image']"></div>
-      <h4 class="item-nom">{{ element['nom'] }}</h4>
 
       <div class="item-1">Vous avez besoin de {{ element['graines']}} graines par m2.</div>
       <div class="item-2">Vous devez arroser {{ element['arrosage'] }} fois par semaine.</div>
@@ -22,6 +24,6 @@
     Vidéo pour réaliser soi-même son potager.
   </mat-card-header>
   <iframe class="frame" width="560" height="315" src="https://www.youtube.com/embed/G4BlA68xs9Y" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
 </mat-card>
