--- a/src/app/conseils/conseils.component.css
+++ b/src/app/conseils/conseils.component.css
@@ -1,3 +1,7 @@
+mat-card-content > div {
+  margin: 10px;
+}
+
 .image {
   width: 40px;
   height: 40px;
@@ -20,13 +24,12 @@
 
 .container {
   display: grid;
-  grid-template-columns: 100px 300px 300px 0px;
+  grid-template-columns: auto;
   grid-template-rows: auto;
   grid-template-areas:
-    " image nom . ."
-    ". main1 main2 ."
-    ". main3 main4."
-    ". main5 main6.";
+    "main1 main2"
+    "main3 main4"
+    "main5 main6";
 }
 
 .item-1 {
