--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,21 +1,26 @@
-<mat-card id="potager">
+<div style='display:flex; position: absolute; top:100px; bottom:100px; right:0; left:0;'>
+<mat-card id="potager" style="margin: auto;">
   <mat-card-header>
     <mat-card-title>Mon petit jardin</mat-card-title>
     <mat-card-subtitle>Commencer mon potager</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-      <mat-list style="display: inline-block;" >
-        <mat-list-item *ngFor="let fruit of fruits">
-          <mat-checkbox (change)="onChange(fruit.id)" color='primary' labelPosition='after'><img class="icones" src="{{ fruit['image'] }}"> {{ fruit['nom'] }} </mat-checkbox>
-        </mat-list-item>
-      </mat-list>
-      <mat-list style="display: inline-block;">
-        <mat-list-item *ngFor="let legume of legumes">
-          <mat-checkbox (change)="onChange(legume.id)" color='primary' labelPosition='after'><img class="icones" src="{{ legume['image'] }}"> {{ legume['nom'] }}</mat-checkbox>
-        </mat-list-item>
-      </mat-list>
+    <mat-list style="display: inline-block;">
+      <mat-list-item *ngFor="let fruit of fruits">
+        <mat-checkbox (change)="onChange(fruit.id)" color='primary' labelPosition='after'><img class="icones"
+            src="{{ fruit['image'] }}"> {{ fruit['nom'] }} </mat-checkbox>
+      </mat-list-item>
+    </mat-list>
+    <mat-list style="display: inline-block;">
+      <mat-list-item *ngFor="let legume of legumes">
+        <mat-checkbox (change)="onChange(legume.id)" color='primary' labelPosition='after'><img class="icones"
+            src="{{ legume['image'] }}"> {{ legume['nom'] }}</mat-checkbox>
+      </mat-list-item>
+    </mat-list>
   </mat-card-content>
   <mat-card-actions id="validateButtonContainer">
-    <button mat-raised-button color="primary" (click)="getResults()" [disabled]="!checkedItems.length">Valider ma liste</button>
+    <button mat-raised-button color="primary" (click)="getResults()" [disabled]="!checkedItems.length">Valider ma
+      liste</button>
   </mat-card-actions>
 </mat-card>
+</div>
