ajout tuto et footer + accueil centré

--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -1,4 +1,6 @@
+<div class="jolieTexte; bloc; textbloc">
 <mat-card>Vous avez sélectionné :</mat-card>
+</div>
 <mat-list>
   <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
     <mat-card>
