--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,5 +4,6 @@
                 src="https://cdn.discordapp.com/attachments/772753451263197184/773164757166981120/mon_petit_jardin_1.png"></button>
     </div>
     <span style="flex: 1 1 auto;"></span>
-    <button mat-button>Contact</button>
+    <button mat-button [routerLink]="['/tuto']">TUTO</button>
+    <button mat-button [routerLink]="['/contact']">Contact</button>
 </mat-toolbar>
