--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,4 +1,4 @@
-<div style='display:flex; position: absolute; top:100px; bottom:100px; right:0; left:0;'>
+<div style='display:flex;'>
 <mat-card id="potager" style="margin: auto;">
   <mat-card-header>
     <mat-card-title>Mon petit jardin</mat-card-title>
