--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -1,5 +1,5 @@
-<div class="jolieTexte; bloc; textbloc">
-<mat-card>Vous avez sélectionné :</mat-card>
+<div class="jolieTexte; commonDiv;" style="text-align: center; margin-top: 20px;">
+      <h3>Vous avez sélectionné :</h3>
 </div>
 <mat-list>
   <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
@@ -9,14 +9,15 @@
         <mat-card-title>{{ element['nom'] }}</mat-card-title>
       </mat-card-header>
 
-<mat-card-content class="container">
-      <div class="item-1">Vous avez besoin de {{ element['graines']}} graines par m2.</div>
-      <div class="item-2">Vous devez arroser {{ element['arrosage'] }} fois par semaine.</div>
-      <div class="item-3">Il faut mettre en terre au moment suivant : {{element['date'] }}. </div>
-      <div class="item-4">La récolte pourra être faite après {{element['recolte']}} semaines.</div>
-      <div class="item-5">Un petit conseil pour favoriser la pousse : {{ element['conditions']}}.</div>
-      <div class="item-6">Quelques liens utiles : <a *ngFor="let lien of element['liens']" [href]="lien">Test</a></div>
-    </mat-card-content>
+      <mat-card-content class="container">
+        <div class="item-1">Vous avez besoin de {{ element['graines']}} graines par m2.</div>
+        <div class="item-2">Vous devez arroser {{ element['arrosage'] }} fois par semaine.</div>
+        <div class="item-3">Il faut mettre en terre au moment suivant : {{element['date'] }}. </div>
+        <div class="item-4">La récolte pourra être faite après {{element['recolte']}} semaines.</div>
+        <div class="item-5">Un petit conseil pour favoriser la pousse : {{ element['conditions']}}.</div>
+        <div class="item-6">Quelques liens utiles : <a *ngFor="let lien of element['liens']" [href]="lien">Test</a>
+        </div>
+      </mat-card-content>
     </mat-card>
   </mat-card>
 
@@ -24,7 +25,9 @@
 
 <mat-card>
   <mat-card-header class="jolieTexte; textbloc" style="margin-bottom: 15px">
-    Vidéo pour réaliser soi-même son potager.
+    <mat-card-subtitle>
+      Vidéo pour réaliser soi-même son potager.
+    </mat-card-subtitle>
   </mat-card-header>
   <iframe class="frame" width="560" height="315" src="https://www.youtube.com/embed/G4BlA68xs9Y" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
