--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -1,14 +1,12 @@
 <div class="jolieTexte; commonDiv;" style="text-align: center; margin-top: 20px;">
       <h3>Vous avez sélectionné :</h3>
 </div>
-<mat-list>
-  <mat-card *ngFor="let element of liste" class="jolieTexte; bloc; textbloc">
+  <mat-card *ngFor="let element of listeSelectionnes" class="jolieTexte; bloc; textbloc">
     <mat-card>
       <mat-card-header>
         <div mat-card-avatar class="item-image"><img class="image" [src]="element['image']"></div>
         <mat-card-title>{{ element['nom'] }}</mat-card-title>
       </mat-card-header>
-
 <mat-card-content class="container">
       <div class="item-1">Vous avez besoin de {{ element['graines']}} </div>
       <div class="item-2">Vous devez arroser {{ element['arrosage'] }} </div>
@@ -20,7 +18,6 @@
     </mat-card>
   </mat-card>
 
-</mat-list>
 
 <mat-card>
   <mat-card-header class="jolieTexte; textbloc" style="margin-bottom: 15px">
