--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -11,4 +11,10 @@
     background-color: #ff0000;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+  }
+
 
