--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -5,7 +5,7 @@
     <mat-card-subtitle>Commencer mon potager</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <mat-list style="display: inline-block;">
+    <mat-list class="container">
       <mat-list-item *ngFor="let element of liste">
         <mat-checkbox (change)="onChange(element.id)" color='primary' labelPosition='after'><img class="icones"
             src="{{ element['image'] }}"> {{ element['nom'] }} </mat-checkbox>
