--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,16 +1,16 @@
-<div style='display:flex;'>
-<mat-card id="potager" style="margin: auto;">
+<div id="potager">
+<mat-card>
   <mat-card-header>
     <mat-card-title>Mon petit jardin</mat-card-title>
     <mat-card-subtitle>Commencer mon potager</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <mat-list class="container">
-      <mat-list-item *ngFor="let element of liste">
+    <div class="container">
+      <div *ngFor="let element of liste">
         <mat-checkbox (change)="onChange(element.id)" color='primary' labelPosition='after'><img class="icones"
             src="{{ element['image'] }}"> {{ element['nom'] }} </mat-checkbox>
-      </mat-list-item>
-    </mat-list>
+        </div>
+      </div>
   </mat-card-content>
   <mat-card-actions id="validateButtonContainer">
     <button mat-raised-button color="primary" (click)="getResults()" [disabled]="!checkedItems.length">Valider ma
