--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,9 +1,10 @@
 <div class="commonDiv" style="text-align: center;">
     <div style="display: inline-block; width: auto; margin-bottom: 20px;">
-    <mat-card>
-        <img src="https://cdn.discordapp.com/attachments/772753451263197184/773164757166981120/mon_petit_jardin_1.png">
-    </mat-card>
-</div>
+        <mat-card>
+            <img
+                src="https://cdn.discordapp.com/attachments/772753451263197184/773164757166981120/mon_petit_jardin_1.png">
+        </mat-card>
+    </div>
 
     <app-accueil></app-accueil>
 
