--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* @import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css'; */
+@import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
 
 
 html, body { height: 100%; }
@@ -19,4 +19,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .commonDiv{
   margin: auto;
   width: 40%;
+}
+
+.mat-checkbox-layout {
+  white-space: normal !important;
 }
