--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,20 +1,20 @@
 <div id="potager">
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Mon petit jardin</mat-card-title>
-    <mat-card-subtitle>Commencer mon potager</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <div class="container">
-      <div *ngFor="let element of liste">
-        <mat-checkbox (change)="onChange(element.id)" color='primary' labelPosition='after'><img class="icones"
-            src="{{ element['image'] }}"> {{ element['nom'] }} </mat-checkbox>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Mon petit jardin</mat-card-title>
+      <mat-card-subtitle>Commencer mon potager</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <div style="text-align: left;" class="container">
+        <div *ngFor="let element of liste">
+          <mat-checkbox (change)="onChange(element.id)" color='primary' labelPosition='after'><img class="icones"
+              src="{{ element['image'] }}"> {{ element['nom'] }}</mat-checkbox>
         </div>
       </div>
-  </mat-card-content>
-  <mat-card-actions id="validateButtonContainer">
-    <button mat-raised-button color="primary" (click)="getResults()" [disabled]="!checkedItems.length">Valider ma
-      liste</button>
-  </mat-card-actions>
-</mat-card>
+    </mat-card-content>
+    <mat-card-actions id="validateButtonContainer">
+      <button mat-raised-button color="primary" (click)="getResults()" [disabled]="!checkedItems.length">Valider ma
+        liste</button>
+    </mat-card-actions>
+  </mat-card>
 </div>
