fin centrage accueil

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -7,11 +7,10 @@
     <mat-card-content>
       <div style="text-align: left;" class="container">
         <div *ngFor="let element of liste">
-          <mat-checkbox (change)="onChange(element.id)" color='primary' labelPosition='after'><img class="icones"
+          <mat-checkbox (change)="onChange(element.id)" color='primary' labelPosition='after'><img style="margin-right: 5px;" class="icones"
               src="{{ element['image'] }}"> {{ element['nom'] }}</mat-checkbox>
         </div>
       </div>
-<<<<<<< HEAD
     </mat-card-content>
     <mat-card-actions id="validateButtonContainer">
       <button mat-raised-button color="primary" (click)="getResults()" [disabled]="!checkedItems.length">Valider ma
@@ -19,12 +18,3 @@
     </mat-card-actions>
   </mat-card>
 </div>
-=======
-  </mat-card-content>
-  <mat-card-actions id="validateButtonContainer">
-    <button mat-raised-button color="primary" (click)="getResults()" [disabled]="!checkedItems.length">Valider ma
-      liste</button>
-  </mat-card-actions>
-</mat-card>
-</div>
->>>>>>> 61211b9a88702991010e8cfb2cdc0084edde0fe0
