page conseil weigth

--- a/src/app/conseils/conseils.component.css
+++ b/src/app/conseils/conseils.component.css
@@ -23,6 +23,7 @@ mat-card-content > div {
 }
 
 .container {
+  width: 700px;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto;
