--- a/src/app/conseils/conseils.component.css
+++ b/src/app/conseils/conseils.component.css
@@ -25,7 +25,7 @@ mat-card-content > div {
 .container {
   width: 700px;
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   grid-template-areas:
     "main1 main2"
