--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,8 +1,8 @@
 <div class="commonDiv" style="text-align: center;">
-    <div style="display: inline-block; width: auto; margin-bottom: 20px;">
+    <div style="display: inline-block; width: auto; margin-bottom: 20px;  margin-top: 10px;">
         <mat-card>
-            <img
-                src="https://cdn.discordapp.com/attachments/772753451263197184/773164757166981120/mon_petit_jardin_1.png">
+            <img style="width: 300px; height: auto;"
+                src="https://cdn.discordapp.com/attachments/772753451263197184/773904905534439434/logo-mpj.png">
         </mat-card>
     </div>
 
