--- a/src/app/conseils/conseils.component.html
+++ b/src/app/conseils/conseils.component.html
@@ -8,10 +8,10 @@
       <mat-card-title>{{ element['nom'] }}</mat-card-title>
     </mat-card-header>
     <mat-card-content class="container">
-      <div class="item-1">Vous avez besoin de {{ element['graines']}} </div>
-      <div class="item-2">Vous devez arroser {{ element['arrosage'] }} </div>
-      <div class="item-3">Il faut mettre en terre au moment suivant : {{element['date'] }}. </div>
-      <div class="item-4">La récolte pourra être faite après {{element['recolte']}} </div>
+      <div class="item-1">Vous avez besoin de {{ element['graines']}}.</div>
+      <div class="item-2">Vous devez arroser {{ element['arrosage'] }}.</div>
+      <div class="item-3">Il faut mettre en terre au moment suivant : {{element['date'] }}.</div>
+      <div class="item-4">La récolte pourra être faite {{element['recolte']}}.</div>
       <div class="item-5">Un petit conseil pour favoriser la pousse : {{ element['conditions']}}.</div>
       <div class="item-6">Un lien pour vous aider : <a target="_blank"
           href="https://www.promessedefleurs.com/conseil-plantes-jardin/ficheconseil/faire-son-premier-potager-guide-pour-les-debutants">Conseils</a>
